# ArmResearch

./: CMakeLists.txt  README.md  RotationMatrixFromQuaternion.m  RotationMatrixFromRPY.m  Step1_FileProcessing.m  Step2_MapBuildingAndInterpolation.m  Step2a_PlotData.m  Step3_lookup.m  TopLevelScript.m  arm_april_data_first_set.mat  arm_april_data_second_set.mat  arm_april_data_third_set.mat  demo_interpolate_measurement.m  interpolate_measurement.m  my_homtotwist.m  my_quattohomog.m  my_rotaxis.m  my_rotparam.m  my_rpytohomog.m  my_skew.m  quat2mat.m
humhu/: .gitignore  README.md  RunAllLogs
humhu/cmake/Modules/: FindIPC.cmake
humhu/matlab/: ExampleRangeBearing.m  README  Setup.m
humhu/matlab/carmen/: LaserScan.m
humhu/src/: .gitignore
humhu/workflow/: CMakeLists.txt  PlayLog.cc  ProcessLog.cc
matlab/: ExampleTraining.m
matlab/carmen/: CarmenLogLaserReader.m  CarmenLogLine.m  CarmenLogReader.m  PlotData.m
matlab/experiment3D/: GenerateArmTrajectories.m
matlab/experimentBeacon/: BeaconCartTransition.m  BeaconCartTransitionJacobian.m  RangeBearingSimulator.m  RunBeaconFilter.m  RunBeaconResults.m  RunBeaconSmoother.m  RunBeaconTrial.m  TestVis.m  TrainBeaconBaseline.m  VisualizeBeaconResults.m
matlab/experimentQuad/: FitYaoQuad.m
matlab/experimentSimple/: TestGLI.m
matlab/experimentTruck/: RunTruckAdaptiveFilter.m  RunTruckBaselines.m  RunTruckFilter.m  RunTruckSmoother.m  RunTruckTrial.m  TruckFeatures.m  TruckObservation.m  TruckObservationDifference.m  TruckObservationJacobian.m  VisualizeTruckResults.m
matlab/mlhgp/: gpfit.m  gplikelihood.m  gpr.m  mlhgpfit.m  mlhgpobjective.m  mlhgppred.m  mlhgpr.m  mlhgpstruct.m  predmlhgp.m  sin_noise.m  williams_noise.m  yuanWahba.m
matlab/quaternions/: mat2quat.m  quat2euler.m  quat2mat.m  quatinv.m  quatmult.m
matlab/regression/: GaussianLikelihoodAscent.m  ModifiedCholeskyRegression.m  PositiveBasisGradient.m  PositiveBasisRegression.m
matlab/utils/: AppendStructs.m  ExtendedKalmanFilter.m  ExtendedKalmanSmoother.m  IntegrateSE2.m  KalmanFilter.m  KalmanSmootherSE3.m  PlotSE3.m  SE3.m  treshape.m  vnorm.m
matlab_kinematics_library/screws/: rotparam.m
matlab_kinematics_library/util/: getkeywait.m
src/: CMakeLists.txt
src/logprocessing/: G2OGraphReader.h  ScanDataAssociation.cc  ScanDataAssociation.h
src/logreader/: CMakeLists.txt  CarmenLogLaserReader.cc
src/sensors/: LaserScan.h  MVGaussianDistribution.cc  MVGaussianDistribution.h
src/taskpool/: CMakeLists.txt  Factory.h  ScanMatchTask.cc  ScanMatchTask.h  ScanMatchTaskFactory.h  ScanMatcherFactory.h  Task.cc  Task.h  TaskMapper.h  TaskPool.h  ThreadsafeClass.h  WorkerClass.cc  WorkerClass.h  WrapperTask.cc
src/ui/: UIPlayback.cc  UIPlayback.h
trevorStuff/: armPositions.m  arm_calibration.m  calibration_xml.xml  camTest.py  quaternion2matrix.m  re_run_aprilTags.py  runExperiment.py  run_calibration.sh
workflow/: FindCorrespondences.cc
(+91 files in other folders)
